# ParticleSyetem

./: .gitignore  CMakeLists.txt  README.md
src/: camera.h  game_object.cpp  game_object.h  glad.c  main.cpp  particle.cs  particle_generator.cpp  particle_generator.h  particle_render.fs  particle_render.vs  render.cpp  render.h  shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h  texture.cpp  texture.h
